# comsol-skills

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/skills/comsol-doc/: SKILL.md
src/comsol_doc/: __init__.py  cli.py  config.py  core.py  formatters.py  models.py
